# harness

./: .env.example  .gitattributes  .gitignore  .harness-allowlist.example  MANUAL_TEST_PROMPT.md  README.md  docker-compose.yml  harness  harness-install.sh  install.sh  proxy.py  zip-readme.md
agents/: Dockerfile  entrypoint.sh
agents/claude/: Dockerfile  entrypoint.sh
agents/claude/defaults/: ccstatusline-settings.json
agents/opencode/: Dockerfile  entrypoint.sh
docs/: WINDOWS.md
firewall/: README.md  configure-git-credentials.sh  init-firewall.sh
mcp-registry/serena/: README.md  client-config.json  compose.yml  harness-meta.json.template
ollama/: Dockerfile  entrypoint.sh
proxy/: Dockerfile  entrypoint.sh  proxy.py  test_proxy.py
scripts/: agent_test.sh  build_zip.sh  derisk_test.sh  firewall_test.sh  full_pipeline_test.sh  harness_test.sh  integration_test.sh  mcp_test.sh  mock_upstream.py  persistence_test.sh  proxy_test.sh  upgrade-manifest.json  upgrade_test.sh
scripts/fixtures/responses/: 01_simple_text.json  02_create_file.json  03_list_files.json  04_serena_find_symbol.json  05_serena_read_symbol.json  06_graphify_extract.json  07_multi_tool_calls.json  08_locked_key.json  99_default.json  (+1 more)
scripts/fixtures/test-project/: README.md  pyproject.toml
scripts/fixtures/test-project/src/calculator/: __init__.py  advanced.py  core.py  exceptions.py  parser.py
scripts/fixtures/test-project/tests/: test_advanced.py  test_core.py  test_parser.py
scripts/lib/: net_helpers.sh  platform.sh  test_helpers.sh  tui_driver.sh  upgrade_actions.sh
